// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromotionCard should handle "promotionType" prop 1`] = `
<div>
  <div
    class="root"
    data-testid="promotion-card"
  >
    <a
      class="link"
    >
      <div
        class="banner"
      >
        <img
          alt="Hello, world!"
          class="image"
          src="https://www.images.com/123"
        />
        <div
          class="banner-content"
        >
          <div
            class="discount"
            data-testid="promotion-card:banner-discount"
          >
            скидки до
            <div
              class="percent"
            >
              23
              %
            </div>
          </div>
        </div>
      </div>
      <div
        class="info"
      >
        <div
          class="header"
        >
          <h4
            class="title"
          >
            Hello, world!
          </h4>
          <p
            class="subtitle"
          >
            Foo, bar, baz...
          </p>
        </div>
        <div
          class="footer"
        >
          <time
            class="timer"
            data-testid="promotion-card:due-date"
          >
            <svg
              class="timer-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M9.778 8H8V6.222a.889.889 0 0 0-1.778 0V8.89c0 .49.398.889.89.889h2.666a.889.889 0 1 0 0-1.778Z"
              />
              <path
                clip-rule="evenodd"
                d="M8 .889c3.913 0 7.111 3.198 7.111 7.111S11.913 15.111 8 15.111.889 11.913.889 8 4.087.889 8 .889Zm0 1.778C5.069 2.667 2.667 5.069 2.667 8S5.069 13.333 8 13.333 13.333 10.931 13.333 8 10.931 2.667 8 2.667Z"
                fill-rule="evenodd"
              />
            </svg>
            До 1 янв
          </time>
          <div
            class="postfix"
            data-testid="promotion-card:postfix"
          >
            Скидка за объём
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PromotionCard should have placeholder component property 1`] = `
<div>
  <div
    data-testid="promotion-card:placeholder"
  >
    <div
      class="part banner"
    />
    <div
      class="part text"
    />
    <div
      class="part text"
    />
  </div>
</div>
`;

exports[`PromotionCard should renders correctly 1`] = `
<div>
  <div
    class="root"
    data-testid="promotion-card"
  >
    <a
      class="link"
    >
      <div
        class="banner"
      >
        <img
          alt="Hello, world!"
          class="image"
          src="https://www.images.com/123"
        />
      </div>
      <div
        class="info"
      >
        <div
          class="header"
        >
          <h4
            class="title"
          >
            Hello, world!
          </h4>
          <p
            class="subtitle"
          >
            Foo, bar, baz...
          </p>
        </div>
        <div
          class="footer"
        >
          <time
            class="timer"
            data-testid="promotion-card:due-date"
          >
            <svg
              class="timer-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M9.778 8H8V6.222a.889.889 0 0 0-1.778 0V8.89c0 .49.398.889.89.889h2.666a.889.889 0 1 0 0-1.778Z"
              />
              <path
                clip-rule="evenodd"
                d="M8 .889c3.913 0 7.111 3.198 7.111 7.111S11.913 15.111 8 15.111.889 11.913.889 8 4.087.889 8 .889Zm0 1.778C5.069 2.667 2.667 5.069 2.667 8S5.069 13.333 8 13.333 13.333 10.931 13.333 8 10.931 2.667 8 2.667Z"
                fill-rule="evenodd"
              />
            </svg>
            До 1 янв
          </time>
        </div>
      </div>
    </a>
  </div>
</div>
`;
